--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         classpath 'org.parchmentmc:librarian:1.+'
+        //classpath 'com.electronwill.night-config:toml:3.6.6'
     }
 }
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
